# test-poetry-pep621-dependabot

./: LICENSE  pyproject.toml
.github/: dependabot.yml
